# solus-sc

./: .gitignore  README.md  README.rst  TRACKING  api-test  app_crap.py  basket.py  components.py  eopkg-assist-wrapper  groups.py  hwtest.py  interface.py  licenses.spdx  main.py  mkinstallsnap.py  mktranslations.py  mktranslations.sh  new.py  package_view.py  pyproject.toml  search_view.py  setup.cfg  setup.py  solus-sc  solus-update-checker  style.css  sync_licenses.sh  test.sh  updates.py  widgets.py  xng
.github/: pull_request_template.md
.tx/: config
data/: com.solus-project.software-center.gschema.xml  solus-sc.desktop  solus-update.desktop
eopkg_assist/: __init__.py  backend.py  main.py  polkit_helper.py
next_sc/: __init__.py  application.py  appsystem.py  available.py  details.py  executor.py  home.py  installed.py  mainwindow.py  media_fetcher.py  models.py  op_queue.py  sidebar.py
odrs/: __init__.py  ratings.py
po/: LINGUAS  POTFILES.in  ar.po  bg.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_CH.po  el.po  en_GB.po  eo.po  es.po  es_419.po  es_AR.po  es_EC.po  es_ES.po  es_MX.po  es_PE.po  es_US.po  eu.po  fi.po  fr_CA.po  fr_FR.po  gl.po  gl_ES.po  he.po  hi_IN.po  hr_HR.po  hu.po  id_ID.po  it.po  it_IT.po  ja.po  ko.po  ko_KR.po  lt.po  (+21 more)
repo_data/: distribution.xml  distribution.xml.in
scom/: pisi.py
snapTests/: THOUGHTS.md  api-test  list-installed  list-screenshots  storage.py
solus_sc/: __init__.py  application.py  appsystem.py  arc.css  available_view.py  basket.py  changelog.py  components.py  details.py  groups.py  (+20 more)
(+80 files in other folders)
