[metadata]
name = solus-sc
version = 23.0
author = Solus
author_email = copyright@getsol.us
description = Solus Software Center
license = GPL-2.0-only
url = https://github.com/getsolus/solus-sc
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
packages = find:
scripts =
    solus-sc
    solus-update-checker
include_package_data = true

[options.package_data]
solus_sc =
    data/update_dialog.ui
    data/styling.css
    data/arc.css
    data/settings.ui

[options.data_files]
/usr/share/applications =
    data/solus-sc.desktop
    data/solus-update.desktop
/usr/share/dbus-1/system-services =
    data/dbus-1/system-services/com.solus_project.eopkgassist.service
/usr/share/dbus-1/system.d =
    data/system.d/com.solus_project.eopkgassist.conf
/usr/share/glib-2.0/schemas =
    data/com.solus-project.software-center.gschema.xml
/usr/share/polkit-1/actions =
    data/polkit-1/actions/com.solus_project.eopkgassist.policy
/usr/share/xdg/autostart =
    data/solus-update.desktop
/usr/libexec =
    eopkg-assist-wrapper

[babel]
domain = solus-sc
compile_catalog = solus-sc/locale
